--- a/threejs/bounce/index.html
+++ b/threejs/bounce/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>bounce</title>
+        <title>静态小球</title>
         <script src="../libs/three.js"></script>
         <style>
             body{
