--- a/threejs/bounce/index_2.html
+++ b/threejs/bounce/index_2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>bounce</title>
+        <title>跳动的小球</title>
         <script src="../libs/three.js"></script>
         <style>
             body{
